# python-project-50

./: .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: check.yml
gendiff/: get_diff.py  parser.py
gendiff/formaters/: plain.py  stylish.py
gendiff/scripts/: gendiff.py  get_diff.py  parser.py
tests/: test_gendiff.py
tests/fixtures/: expected_1.txt
